--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1 style="text-align:center;">Curriculum Vitae</h1>
-  <p style="text-align:center;">You can add your CV content here.</p>
+  <p style="text-align:center;">CV</p>
   <a href="cv.pdf" target="_blank">Download my CV (PDF)</a>
 
 </body>
