--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1 style="text-align:center;">Blog</h1>
-  <p style="text-align:center;">Blog content here.</p>
+  <p style="text-align:center;">Coming soon!</p>
 </body>
 </html>
