--- a/farsi.html
+++ b/farsi.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1 style="text-align:center;">Farsi Blog</h1>
-  <p style="text-align:center;">You can add your Farsi Blog content here.</p>
+  <p style="text-align:center;">به زودی...</p>
 </body>
 </html>
