--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <div class="container">
     <div class="photo-section">
-      <img src="your-photo.jpg" alt="Hamed Milani Photo">
+      <img src="hamed-photo.jpg" alt="Hamed Milani Photo">
       <div class="contact">
         <div>
           <a href="mailto:hamed.milani@ucalgary.ca">hamed.milani@ucalgary.ca</a>
