--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
       <p>We study a two-echelon supply chain with a central distribution center and two suppliers with different levels of unreliability. The goal is to decide the optimal ordering proportions from each supplier under uncertainty. The problem is modeled as a discrete-time Markov Decision Process and solved exactly for a finite time horizon. Our contribution includes a new Markov Chain with three states to better capture the unreliable supplier’s behavior.</p>
       <div class="links">
         <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4833769" target="_blank">View on SSRN</a> |
-        <a href="https://shorturl.at/q62mp" target="_blank">View Farsi Version</a>
+        <a href="https://shorturl.at/q62mp" target="_blank">View Farsi Version on Sharif University's E-Library</a>
       </div>
     </div>
 
@@ -92,29 +92,29 @@
       <h2>Summer Paper</h2>
       <p><strong>“Energy-Efficient Resource Scheduling for a Single Machine with Production Constraints: A Mathematical Model”</strong><br>
       Advisor: Prof. Barış Tan</p>
-      <p>This study models a single-machine production system with input buffer and throughput constraints. We formulate an energy-efficient scheduling model using robust optimization under uncertainty, balancing operational costs with desired throughput. The server can switch between on and off states, and our model ensures feasibility across scenarios while minimizing average costs.</p>
+      <p>This study models a single-machine production system with input buffer and throughput constraints. We formulate an energy-efficient scheduling model using robust optimization under uncertainty, balancing operational costs with desired throughput. The server can switch between on, off, and warm-up states, and our model ensures feasibility across scenarios while minimizing average costs.</p>
       <div class="links">
-        <a href="#" target="_blank">Available upon request</a>
+        <a href="mailto:hamed.milani@ucalgary.ca" target="_blank">Available upon request</a>
       </div>
     </div>
 
     <div class="project">
       <h2>Working Paper</h2>
       <p><strong>“Personalized Breast Cancer Screening by Combining Screening and Diagnostic Decisions”</strong><br>
-      Co-authors: Milani H., Bijvank M., Piri H.</p>
+      Authors: Milani H., Bijvank M., Piri H.</p>
       <p>We develop a unified framework for breast cancer screening and diagnostic decisions using a Partially Observable Markov Decision Process (POMDP). By combining screening timing and diagnostic follow-up into one model, we aim to improve efficiency and personalization in breast cancer pathways. The model highlights how the interdependence of decisions can affect overall outcomes.</p>
       <div class="links">
-        <a href="your-preprint1.pdf" target="_blank">Download Preprint</a>
+        <a href="preprint1.pdf" target="_blank">Download Proposal (last update: April 26, 2025)</a>
       </div>
     </div>
 
     <div class="project">
       <h2>Working Paper</h2>
       <p><strong>“Trade-offs of Breast Cancer Screening Scenarios in Canada: A Microsimulation Modeling Study”</strong><br>
-      Co-authors: Milani H., Bijvank M., Piri H.</p>
+      Authors: Milani H., Bijvank M., Piri H.</p>
       <p>Using the OncoSim-Breast microsimulation model, we evaluate cost-effectiveness and harm-to-benefit ratios of various breast cancer screening strategies. This includes hybrid policies combining annual and triennial intervals. Our findings suggest hybrid strategies beginning at age 45 offer superior outcomes compared to current guidelines.</p>
       <div class="links">
-        <a href="your-preprint2.pdf" target="_blank">Download Preprint</a>
+        <a href="preprint2.pdf" target="_blank">Download Preprint (last update: April 26, 2025)</a>
       </div>
     </div>
 
