--- a/research.html
+++ b/research.html
@@ -104,7 +104,7 @@
       Authors: Milani H., Bijvank M., Piri H.</p>
       <p>We develop a unified framework for breast cancer screening and diagnostic decisions using a Partially Observable Markov Decision Process (POMDP). By combining screening timing and diagnostic follow-up into one model, we aim to improve efficiency and personalization in breast cancer pathways. The model highlights how the interdependence of decisions can affect overall outcomes.</p>
       <div class="links">
-        <a href="preprint1.pdf" target="_blank">Download Proposal (last update: April 26, 2025)</a>
+        <a href="POMDP_proposal.pdf" target="_blank">Download Proposal (last update: April 26, 2025)</a>
       </div>
     </div>
 
@@ -114,7 +114,7 @@
       Authors: Milani H., Bijvank M., Piri H.</p>
       <p>Using the OncoSim-Breast microsimulation model, we evaluate cost-effectiveness and harm-to-benefit ratios of various breast cancer screening strategies. This includes hybrid policies combining annual and triennial intervals. Our findings suggest hybrid strategies beginning at age 45 offer superior outcomes compared to current guidelines.</p>
       <div class="links">
-        <a href="preprint2.pdf" target="_blank">Download Preprint (last update: April 26, 2025)</a>
+        <a href="simulation_preprint.pdf" target="_blank">Download Preprint (last update: April 26, 2025)</a>
       </div>
     </div>
 
