--- a/projects/helsa/index.html
+++ b/projects/helsa/index.html
@@ -2,170 +2,71 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Helsa Shift Management mini App</title>
+    <title>Helsa Project</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f6f8;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
-        }
-
-        header {
-            background-color: #2c3e50;
-            color: #fff;
-            padding: 15px 20px;
-            width: 100%;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo-container {
-            height: 40px; /* Adjust as needed */
-            margin-right: 15px;
-        }
-
-        .logo {
-            max-height: 100%;
-            width: auto; /* Maintain aspect ratio */
-        }
-
-        .app-title {
-            font-size: 1.2em;
-            font-weight: bold;
-        }
-
-        .container {
-            background-color: #fff;
-            padding: 30px;
+            font-family: Arial, sans-serif;
             margin: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-            width: 90%;
-            max-width: 900px;
             text-align: center;
         }
-
-        .app-description {
-            color: #555;
-            line-height: 1.6;
+       .controls {
             margin-bottom: 20px;
         }
-
-        .controls {
-            margin-bottom: 25px;
-            display: flex;
-            gap: 10px;
-            align-items: center;
-            justify-content: center;
+        select, input[type="date"] {
+            margin: 0 5px;
+            padding: 5px;
         }
-
-        select, input[type="date"], button {
-            padding: 10px 12px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 0.9em;
-            background-color: #fff;
-            color: #333;
-        }
-
         button {
-            background-color: #3498db;
-            color: #fff;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
+            padding: 5px 10px;
+            margin-left: 10px;
         }
-
-        button:hover {
-            background-color: #2980b9;
-        }
-
         .shift-actions {
-            margin-top: 20px;
-            display: flex;
-            gap: 10px;
-            justify-content: center;
+            margin-top: 10px;
         }
-
         .summary-container {
             text-align: left;
-            padding: 20px;
-            border: 1px solid #eee;
-            border-radius: 6px;
-            margin-bottom: 20px;
-            background-color: #f9f9f9;
+            max-width: 600px;
+            margin: 0 auto 20px auto;
+            border: 1px solid #aaa;
+            padding: 15px;
+            border-radius: 5px;
         }
-
-        .summary-container h3 {
-            color: #333;
-            margin-top: 0;
-            margin-bottom: 15px;
-            font-size: 1.1em;
-            border-bottom: 2px solid #eee;
-            padding-bottom: 10px;
-        }
-
-        .summary-container p {
-            color: #555;
-            margin-bottom: 8px;
-            font-size: 0.95em;
-        }
-
         .calendar-container {
             display: grid;
-            grid-template-columns: repeat(7, minmax(50px, 1fr));
-            gap: 5px;
-            margin-top: 25px;
-            width: 100%;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 4px;
+            margin-top: 20px;
             max-width: 800px;
+            margin-inline: auto;
         }
-
         .calendar-cell {
-            border: 1px solid #eee;
-            padding: 10px;
-            min-height: 70px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-size: 0.9em;
-            color: #444;
-            border-radius: 4px;
-            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 8px;
+            min-height: 60px;
         }
-
         .calendar-header {
             font-weight: bold;
-            background-color: #f0f0f0;
-            color: #333;
+            background: #f0f0f0;
         }
-
-        .Day { background-color: #e1f5fe; color: #1976d2; }
-        .Evening { background-color: #fffde7; color: #fbc02d; }
-        .Night { background-color: #e8f5e9; color: #388e3c; }
-        .Rest { background-color: #f5f5f5; color: #757575; }
-
+        .Day { background: #cce5ff; }
+        .Evening { background: #fff3cd; }
+        .Night { background: #d4edda; }
+        .Rest { background: #e2e3e5; }
+        .Off { /* You can add specific styling for off-days here if needed */ }
         .month-separator {
             grid-column: 1 / -1;
-            border-top: 1px solid #ccc;
-            margin-top: 20px;
-            padding-top: 10px;
-            text-align: left;
+            border-top: 2px solid black;
+            position: relative;
+            height: 20px;
+            margin-top: 10px;
         }
-
         .month-label {
+            position: absolute;
+            top: 2px;
+            left: 0;
             font-weight: bold;
-            font-size: 1em;
-            color: #333;
+            font-size: 14px;
         }
-
         .modal {
             display: none;
             position: fixed;
@@ -173,144 +74,63 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0, 0, 0, 0.5);
+            background: #0008;
             align-items: center;
             justify-content: center;
         }
-
         .modal-content {
             background: #fff;
-            padding: 25px;
-            width: 350px;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-            text-align: left;
-        }
-
-        .modal-content h3 {
-            color: #333;
-            margin-top: 0;
-            margin-bottom: 15px;
-            font-size: 1.2em;
-        }
-
-        .modal-content label {
-            display: block;
-            margin-bottom: 8px;
-            color: #555;
-            font-size: 0.95em;
-        }
-
-        .modal-content input[type="text"],
-        .modal-content input[type="date"] {
-            width: calc(100% - 12px);
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            margin-bottom: 15px;
-            font-size: 0.9em;
-        }
-
-        .modal-content div {
-            margin-bottom: 15px;
-        }
-
-        .modal-content div button {
-            margin-right: 5px;
-            padding: 8px 10px;
-            font-size: 0.9em;
-        }
-
-        .modal-content p#patternPreview {
-            margin-top: 10px;
-            color: #555;
-            font-size: 0.9em;
-        }
-
-        .modal-content button[onclick="saveShift()"],
-        .modal-content button[onclick="closeModal()"] {
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            color: #fff;
-            cursor: pointer;
-            font-size: 0.95em;
-            transition: opacity 0.3s ease;
-        }
-
-        .modal-content button[onclick="saveShift()"] {
-            background-color: #27ae60;
-        }
-
-        .modal-content button[onclick="saveShift()"]:hover {
-            opacity: 0.9;
-        }
-
-        .modal-content button[onclick="closeModal()"] {
-            background-color: #e74c3c;
-            margin-left: 10px;
-        }
-
-        .modal-content button[onclick="closeModal()"]:hover {
-            opacity: 0.9;
+            padding: 20px;
+            width: 300px;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <div class="logo-container">
-            <img src="projects/helsa/logo.png" alt="Helsa Logo" class="logo">
-        </div>
-        <h1 class="app-title">Helsa Shift Management mini App</h1>
-    </header>
+    <h1>Helsa Project</h1>
+    <p>Display shifts on a calendar and calculate the number of days for each shift type between two dates.</p>
 
-    <div class="container">
-        <p class="app-description">
-            This tool helps shift healthcare personnel visualize their schedules on a calendar and analyze their workload
-            between two dates. Define your shift patterns, apply them to calendars, and calculate workdays, holidays, and more.
-        </p>
+    <div class="controls">
+        <label for="shiftSelect">Select Shift:</label>
+        <select id="shiftSelect"></select>
+        <input type="date" id="startDate">
+        <input type="date" id="endDate">
+        <button onclick="calculateAndDisplay()">Calculate and Show on Calendar</button>
+        <select id="downloadType">
+            <option value="png">Download as JPG</option>
+            <option value="pdf">Download as PDF</option>
+        </select>
+        <button onclick="downloadReport()">Download Report</button>
+    </div>
 
-        <div class="controls">
-            <label for="shiftSelect">Select Shift:</label>
-            <select id="shiftSelect"></select>
-            <input type="date" id="startDate">
-            <input type="date" id="endDate">
-            <button onclick="calculateAndDisplay()">Show on Calendar</button>
-            <select id="downloadType">
-                <option value="png">Download as JPG</option>
-                <option value="pdf">Download as PDF</option>
-            </select>
-            <button onclick="downloadReport()">Download Report</button>
-        </div>
+    <div class="shift-actions">
+        <button onclick="openModal()">Add New Shift</button>
+        <button onclick="editShift()">Edit Selected Shift</button>
+        <button onclick="deleteShift()">Delete Selected Shift</button>
+    </div>
 
-        <div class="shift-actions">
-            <button onclick="openModal()">Add New Shift</button>
-            <button onclick="editShift()">Edit Selected Shift</button>
-            <button onclick="deleteShift()">Delete Selected Shift</button>
-        </div>
+    <div id="reportContainer">
+        <div id="summary" class="summary-container"></div>
+        <div id="calendarHeader"></div>
+        <div id="calendar" class="calendar-container"></div>
+    </div>
 
-        <div id="reportContainer">
-            <div id="summary" class="summary-container"></div>
-            <div id="calendar" class="calendar-container"></div>
-        </div>
-
-        <div id="shiftModal" class="modal">
-            <div class="modal-content">
-                <h3 id="modalTitle">Add Shift</h3>
-                <label>Name: <input id="modalName" type="text"></label><br><br>
-                <label>Start Date: <input id="modalStartDate" type="date"></label><br><br>
-                <label>Pattern: </label>
-                <div>
-                    <button onclick="addToPattern('Day')">Day</button>
-                    <button onclick="addToPattern('Evening')">Evening</button>
-                    <button onclick="addToPattern('Night')">Night</button>
-                    <button onclick="addToPattern('Rest')">Rest</button>
-                    <button onclick="removeLastPattern()">Undo Last</button>
-                </div>
-                <p id="patternPreview"></p>
-                <button onclick="saveShift()">Save</button>
-                <button onclick="closeModal()">Cancel</button>
+    <div id="shiftModal" class="modal">
+        <div class="modal-content">
+            <h3 id="modalTitle">Add Shift</h3>
+            <label>Name: <input id="modalName" type="text"></label><br><br>
+            <label>Start Date: <input id="modalStartDate" type="date"></label><br><br>
+            <label>Pattern: </label>
+            <div>
+                <button onclick="addToPattern('Day')">Day</button>
+                <button onclick="addToPattern('Evening')">Evening</button>
+                <button onclick="addToPattern('Night')">Night</button>
+                <button onclick="addToPattern('Rest')">Rest</button>
+                <button onclick="removeLastPattern()">Undo Last</button>
             </div>
+            <p id="patternPreview"></p>
+            <button onclick="saveShift()">Save</button>
+            <button onclick="closeModal()">Cancel</button>
         </div>
     </div>
 
@@ -450,4 +270,112 @@
             const grid = document.getElementById('calendar');
             grid.innerHTML = "";
 
-            if (!data || data.
+            if (!data || data.length === 0) {
+                return;
+            }
+
+            let startDate = new Date(data[0].date);
+            let startDayOfWeek = startDate.getDay();
+
+            let leadingBlanks = (startDayOfWeek === 0) ? 6 : startDayOfWeek - 1;
+
+            // Add the day of the week header row
+            daysOfWeek.forEach(day => {
+                const headerCell = document.createElement("div");
+                headerCell.className = "calendar-cell calendar-header";
+                headerCell.innerText = day;
+                grid.appendChild(headerCell);
+            });
+
+            // Add leading blanks for the first week
+            for (let i = 0; i < leadingBlanks; i++) {
+                const empty = document.createElement("div");
+                empty.className = "calendar-cell";
+                grid.appendChild(empty);
+            }
+
+            let currentMonth = startDate.getMonth();
+            let currentYear = startDate.getFullYear();
+
+            data.forEach((entry, index) => {
+                const date = new Date(entry.date);
+                const entryMonth = date.getMonth();
+                const entryYear = date.getFullYear();
+
+                if (entryMonth !== currentMonth || entryYear !== currentYear) {
+                    const separator = document.createElement("div");
+                    separator.className = "month-separator";
+                    const label = document.createElement("div");
+                    label.className = "month-label";
+                    label.textContent = date.toLocaleString('default', { month: 'long', year: 'numeric' });
+                    separator.appendChild(label);
+                    grid.appendChild(separator);
+
+                    // Add day of week headers after each month separator
+                    daysOfWeek.forEach(day => {
+                        const headerCell = document.createElement("div");
+                        headerCell.className = "calendar-cell calendar-header";
+                        headerCell.innerText = day;
+                        grid.appendChild(headerCell);
+                    });
+
+                    let firstDayOfMonth = new Date(entryYear, entryMonth, 1).getDay();
+                    let leadingBlanksMonth = (firstDayOfMonth === 0) ? 6 : firstDayOfMonth - 1;
+                    for (let i = 0; i < leadingBlanksMonth; i++) {
+                        const empty = document.createElement("div");
+                        empty.className = "calendar-cell";
+                        grid.appendChild(empty);
+                    }
+
+                    currentMonth = entryMonth;
+                    currentYear = entryYear;
+                }
+
+                const div = document.createElement("div");
+                div.className = `calendar-cell ${entry.type}`;
+                div.innerHTML = `${date.getDate()}<br><strong>${entry.type}</strong>`;
+                grid.appendChild(div);
+            });
+
+            // Fill any remaining cells in the last week
+            const totalCells = grid.children.length;
+            const remainingCells = 7 - (totalCells % 7);
+            if (remainingCells > 0 && remainingCells < 7) {
+                for (let i = 0; i < remainingCells; i++) {
+                    const empty = document.createElement("div");
+                    empty.className = "calendar-cell";
+                    grid.appendChild(empty);
+                }
+            }
+        }
+
+
+        async function downloadReport() {
+            const type = document.getElementById('downloadType').value;
+            const reportElement = document.getElementById('reportContainer');
+
+            if (type === 'png') {
+                html2canvas(reportElement).then(canvas => {
+                    const link = document.createElement('a');
+                    link.download = 'shift_report.jpg';
+                    link.href = canvas.toDataURL('image/jpeg');
+                    link.click();
+                });
+            } else if (type === 'pdf') {
+                const { jsPDF } = window.jspdf;
+                const pdf = new jsPDF('p', 'mm', 'a4');
+                const canvas = await html2canvas(reportElement, { scale: 2 });
+                const imgData = canvas.toDataURL('image/jpeg', 1.0);
+
+                const imgWidth = pdf.internal.pageSize.getWidth() - 20;
+                const imgHeight = (canvas.height * imgWidth) / canvas.width;
+
+                pdf.addImage(imgData, 'JPEG', 10, 10, imgWidth, imgHeight);
+                pdf.save('shift_report.pdf');
+            }
+        }
+
+        window.onload = populateShiftSelect;
+    </script>
+</body>
+</html>
